feat(auth): Build core authentication module
